chore: migrate from chi to fiber, use batch processing for saving
